# image_search_engine

./: README.md  app.py  data_checker.py  db_status.json  encoding_errors_20250701_190109.json  file_checker.py  main.py  pyproject.toml  start.py
static/: app.js
templates/: index.html
