[project]
name = "image_search_engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.0",
    "clip>=0.2.0",
    "flask>=3.1.1",
    "googletrans==3.1.0a0",
    "matplotlib>=3.10.3",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "pymysql>=1.1.1",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
]
